# moabbr

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: lint.yml
docker/: .gitignore  README.md  requirements.txt
docker/src/: bnma.R  bnma.sql  nma.R  nma.sql  run.R  utils.R
docs/: .buildinfo  analysis.html  genindex.html  index.html  moabbr.html  objects.inv  plots.html  plotting.html  results.html  search.html  search.js  searchindex.js
docs/.doctrees/: analysis.doctree  environment.pickle  index.doctree  plots.doctree  plotting.doctree  results.doctree
docs/_sources/: analysis.md.txt  plotting.md.txt
docs/_static/: custom.css
docs/moabbr/: plots.html
moabbr/: __init__.py  plots.py  run.py
moabbr/sql/: nma.sql
python/: README.md  pyproject.toml  requirements.txt
python/src/moabbr/: __init__.py  run.py
sphinx/: conf.py  index.md  plots.md  results.md
